--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
  <h1>Sarina Nikolic</h1>   
- <nav>Kontakt
-     Lebenslauf
+ <nav>
+     <a href="#Kontakt">Kontakt</a>
+     <a href="#Lebenslauf">Lebenslauf</a>
  </nav>
+
  <img src="" alt="">
  <main> <p>Ich mag gerne
     <ul>
@@ -20,7 +22,7 @@
         <li>Schach</li>
     </ul>
 </p>
-<section>Kontakt</section>
+<a id="Kontakt"></a>
 <p>sarina.nikolic@gmail.com</p>
 <section>Lebenslauf</section>
 <p>
