flexbox hinzugefügt und html edited

--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
- <h1>Sarina Nikolic</h1>   
- <nav>
-     <a href="#Kontakt">Kontakt</a>
-     <a href="#Lebenslauf">Lebenslauf</a>
- </nav>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Sarina Nikolic</h1>
+      <nav>
+        <a href="#Kontakt" class="button">Kontakt</a>
+        <a href="#Lebenslauf" class="button">Lebenslauf</a>
+      </nav>
 
- <img src="" alt="">
- <main> <p>Ich mag gerne
-    <ul>
-        <li>Sommer</li>
-        <li>Skifahren</li>
-        <li>Sonnencreme</li>
-        <li>Schach</li>
-    </ul>
-</p>
-<a id="Kontakt"></a>
-<p>sarina.nikolic@gmail.com</p>
-<section>Lebenslauf</section>
-<p>
-    <ul>
-        <li>Master of Arts Mehrsprachigkeit und Bildung</li>
-        <li>Bachelor of Arts Literatur- und Sprachwissenschaft</li>
-        <li>Bankkauffrau (IHK)</li>
-    </ul>
+      <img src="" alt="" />
+      <section class="schoenebox">
+        Ich mag gerne:
+        <ul>
+          <li>Sommer</li>
+          <li>Skifahren</li>
+          <li>Sonnencreme</li>
+          <li>Schach</li>
+        </ul>
+      </section>
+      <section>
+        <a id="Kontakt" class="button">Kontakt</a>
+        <p>sarina.nikolic@gmail.com</p>
+      </section>
 
+      <section>
+        <a id="Lebenslauf" class="button">Lebenslauf</a>
 
-</p>
+        <ul class="stationen">
+          <li>Master of Arts Mehrsprachigkeit und Bildung</li>
+          <li>Bachelor of Arts Literatur- und Sprachwissenschaft</li>
+          <li>Bankkauffrau (IHK)</li>
+        </ul>
+      </section>
+    </main>
 
-
-</main>
-
-<footer>
-    <small>Copyright by Sarina</small>
-</footer>
-
-</body>
+    <footer>
+      <small>Copyright by Sarina</small>
+    </footer>
+  </body>
 </html>
