--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <h1>Sarina Nikolic</h1>
+      <h1>Sarina Nikolić</h1>
       <nav>
         <a href="#Kontakt" class="button">Kontakt</a>
         <a href="#Lebenslauf" class="button">Lebenslauf</a>
