--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <main>
       <h1>Sarina Nikolić</h1>
       <nav>
+        <a href="#Über  mich" class="button">Über mich</a>
         <a href="#Kontakt" class="button">Kontakt</a>
         <a href="#Lebenslauf" class="button">Lebenslauf</a>
       </nav>
 
-      <img src="" alt="" />
+      <img src="images/me.jpg" alt="">
       <section class="schoenebox">
+        <p>Lorem ipsum dolor sit amet.</p>
         Ich mag gerne:
         <ul>
           <li>Sommer</li>
