--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
       <section id="Kontakt" class="schoenebox">
         <a class="button">Kontakt</a>
         <p>sarina.nikolic@gmail.com</p>
+
+        <ul class="contact">
+          <li><a href="https://github.com/sarina-nikolic">GitHub</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/sarina-nikolić/">LinkedIn</a>
+          </li>
+        </ul>
       </section>
 
       <section id="Lebenslauf" class="schoenebox">
