--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
         <a class="button">Kontakt</a>
         <p>sarina.nikolic@gmail.com</p>
 
-        <ul class="contact">
-          <li><a href="https://github.com/sarina-nikolic">GitHub</a></li>
+        <ul>
           <li>
-            <a href="https://www.linkedin.com/in/sarina-nikolić/">LinkedIn</a>
+            <a href="https://github.com/sarina-nikolic" class="contact"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/sarina-nikolić/"
+              class="contact"
+              >LinkedIn</a
+            >
           </li>
         </ul>
       </section>
