Edit button contact

--- a/index.html
+++ b/index.html
@@ -33,26 +33,6 @@
         </ul>
       </section>
 
-      <section id="Kontakt" class="schoenebox">
-        <a class="button">Kontakt</a>
-        <p>sarina.nikolic@gmail.com</p>
-
-        <ul>
-          <li>
-            <a href="https://github.com/sarina-nikolic" class="contact"
-              >GitHub</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/sarina-nikolić/"
-              class="contact"
-              >LinkedIn</a
-            >
-          </li>
-        </ul>
-      </section>
-
       <section id="Lebenslauf" class="schoenebox">
         <a class="button">Lebenslauf</a>
         <ul>
@@ -60,6 +40,18 @@
           <li>Bachelor of Arts Literatur- und Sprachwissenschaft</li>
           <li>Bankkauffrau (IHK)</li>
         </ul>
+      </section>
+
+      <section id="Kontakt" class="contact">
+        <a class="button">Kontakt</a>
+
+        <a href="https://github.com/sarina-nikolic" class="contact">GitHub</a>
+
+        <a href="https://www.linkedin.com/in/sarina-nikolić/" class="contact"
+          >LinkedIn</a
+        >
+
+        <a href="mailto:sarina.nikolic@gmail.com" class="contact">E-Mail </a>
       </section>
     </main>
 
