--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="global.css" />
     <title>Sarina Nikolic Web Dev Student</title>
   </head>
+
   <body>
     <header>
       <h1>Sarina Nikolić</h1>
