--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="global.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Sarina Nikolic Web Dev Student</title>
   </head>
 
@@ -24,7 +32,7 @@
     </header>
 
     <main>
-      <section id="Über mich" class="schoenebox">
+      <section id="Über mich" class="box">
         <a class="button">Über mich</a>
         <p>Lorem ipsum dolor sit amet.</p>
         Ich mag gerne:
@@ -36,7 +44,7 @@
         </ul>
       </section>
 
-      <section id="Lebenslauf" class="schoenebox">
+      <section id="Lebenslauf" class="box">
         <a class="button">Lebenslauf</a>
         <ul>
           <li>Master of Arts Mehrsprachigkeit und Bildung</li>
@@ -48,7 +56,9 @@
       <section id="Kontakt" class="contact">
         <a class="button">Kontakt</a>
 
-        <a href="https://github.com/sarina-nikolic" class="contact">GitHub</a>
+        <a href="https://github.com/sarina-nikolic" class="contact"
+          ><i class="fa-brands fa-github"></i>GitHub</a
+        >
 
         <a href="https://www.linkedin.com/in/sarina-nikolić/" class="contact"
           >LinkedIn</a
